02--Pre-flight/docker-registry-service-copy.yml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: docker-registry
spec:
  selector: 
   app: registry
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
