02--Pre-flight/docker-registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: docker-registry
spec:
  selector: 
   app: registry
  type: NodePort 
  ports:
  - port: 5000
    nodePort: 31320
    protocol: TCP
    targetPort: 5000
